--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ Imports:
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+URL: https://github.com/brandonerose/Rosyverse
+BugReports: https://github.com/brandonerose/Rosyverse/issues
