--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Rosyverse
 Title: What the Package Does (One Line, Title Case)
-Version: 0.1.0
+Version: 0.1.0.9000
 Authors@R: 
     person("Brandon", "Rose", , "thecodingdocs@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0009-7813-1960", website = "TheCodingDocs.com"))
@@ -14,7 +14,8 @@ Depends:
 Imports: 
     magrittr,
     remotes,
+    RosyDev,
     utils
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
