--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,12 @@ Imports:
     RosyDev,
     tools,
     utils
+Remotes: 
+    github::brandonerose/RosyUtils
+    github::brandonerose/RosyDev
+    github::brandonerose/RosyDB
+    github::brandonerose/RosyApp
+    github::brandonerose/RosyREDCap
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
