--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,10 @@ Imports:
     tools,
     utils
 Remotes: 
-    github::brandonerose/RosyUtils
-    github::brandonerose/RosyDev
-    github::brandonerose/RosyDB
-    github::brandonerose/RosyApp
+    github::brandonerose/RosyUtils,
+    github::brandonerose/RosyDev,
+    github::brandonerose/RosyDB,
+    github::brandonerose/RosyApp,
     github::brandonerose/RosyREDCap
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
