--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,11 @@ Depends:
 Imports: 
     magrittr,
     remotes,
+    RosyDev,
     tools,
     utils
+Remotes: 
+    github::brandonerose/RosyDev
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
