--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,10 +15,18 @@ Imports:
     magrittr,
     remotes,
     RosyDev,
+    RosyUtils,
+    RosyDB,
+    RosyREDCap,
+    RosyApp,
     tools,
     utils
 Remotes: 
-    github::brandonerose/RosyDev
+    github::brandonerose/RosyDev,
+    github::brandonerose/RosyUtils,
+    github::brandonerose/RosyDB,
+    github::brandonerose/RosyREDCap,
+    github::brandonerose/RosyApp
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
