--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,19 @@ Depends:
 Imports: 
     magrittr,
     remotes,
+    RosyApp,
+    RosyDB,
     RosyDev (>= 0.1.0.9016),
+    RosyREDCap,
+    RosyUtils,
     tools,
     utils
 Remotes: 
-    github::brandonerose/RosyDev
+    github::brandonerose/RosyApp,
+    github::brandonerose/RosyDB,
+    github::brandonerose/RosyDev,
+    github::brandonerose/RosyREDCap,
+    github::brandonerose/RosyUtils
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
