--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export("%>%")
 export(RosyPackages)
 export(check_Rosyverse_conflicts)
 export(load_all)
+export(remove_all)
 export(update_all)
 importFrom(magrittr,"%>%")
